--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "js-plc-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "publish.js",
   "scripts": {
     "build": "rollup -c",
     "publish": "node ./publish.js",
     "lint": "eslint rollup.config.js src/ --ext=mjs"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-replace": "^2.3.3",
