--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "rollup -c",
     "publish": "node ./publish.js",
-    "lint": "eslint rollup.config.js src/ --ext=mjs"
+    "lint": "eslint rollup.config.js publish.js src/ --ext=mjs"
   },
   "author": "",
   "license": "MIT",
